# libscreencapture

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
demo/: demo_capture.c
include/: screencapture.h  screenshot.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
src/: engine.h  logger.c  logger.h  logging.c  logging.h  save_jpg.c  save_png.c
src/darwin/: opengl.c  screen_capture.c  screen_info.c
src/windows/: directx.c  gdi.c  screen_capture.c  screen_info.c
src/x11/: XGetImage.c  opengl.c  screen_capture.c  screen_info.c
